--- a/z_music/pubspec.yaml
+++ b/z_music/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  http: '>=0.11.3+12'
+  dio: ^3.0.9
+  dio_cookie_manager: ^1.0.0
 
 dev_dependencies:
   flutter_test:
