--- a/z_music/pubspec.yaml
+++ b/z_music/pubspec.yaml
@@ -24,8 +24,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: '>=0.11.3+12'
+  html: ^0.14.0+3
   dio: ^3.0.9
   dio_cookie_manager: ^1.0.0
+  cookie_jar: ^1.0.0
 
 dev_dependencies:
   flutter_test:
