--- a/z_music/pubspec.yaml
+++ b/z_music/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   dio: ^3.0.9
   dio_cookie_manager: ^1.0.0
   cookie_jar: ^1.0.0
+  provider: ^4.0.5
 
 dev_dependencies:
   flutter_test:
